--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,21 @@ l12
 l13
 l14
 l15
+l16
+l17
+l18
+l19
+l20
+l21
+l22
+l23
+l24
+l25
+l26
+l27
+l28
+l29
+l30
+l31
 l32
-l32.c
+tempCodeRunnerFile.c
